# maplejuice-cloud-computing

./: README.md
mp1-distributed-log-querier/: .gitignore  CMakeLists.txt  Makefile  README.md  client_func.cpp  client_func.h  grep.cpp  main.cpp  server_func.cpp  server_func.h  test.sh
mp2-distributed-group-membership/: .gitignore  CMakeLists.txt  Makefile  README.md
mp2-distributed-group-membership/example/: example_udp_client.cpp  example_udp_server.cpp
mp2-distributed-group-membership/src/: client.cpp  client_func.h  grep.cpp  grep.h  server.cpp  server_func.cpp  server_func.h
mp2-distributed-group-membership/test/: log_file_generator.cpp
mp3-simple-distributed-file-system/: .gitignore  CMakeLists.txt  Makefile  README.md
mp3-simple-distributed-file-system/src/: client.cpp  client_func.cpp  client_func.h  general.cpp  general.h  grep.cpp  server.cpp  server_func.cpp  server_func.h  server_membership.h  server_sdfs.cpp
mp4-maple-juice/: .gitignore  CMakeLists.txt  Makefile  README.md
mp4-maple-juice/files/local/: E0  E2  E4  E7  E9  rev_juice0  rev_maple0  wc_full_juice0  wc_full_maple0
mp4-maple-juice/maplejuice/: maplejuice_server.cpp  reverse_juice0.cpp  reverse_maple0.cpp  weblink.java  wordcount_juice0.cpp  wordcount_maple0.cpp
mp4-maple-juice/src/: client_func.cpp  client_func.h  general.h  grep.cpp  server.cpp  server_func.cpp  server_func.h  server_maplejuice.cpp  server_maplejuice.h  server_membership.cpp  server_membership.h  server_sdfs.cpp  server_sdfs.h
